--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -666,3 +666,25 @@ scrollbar-width: none;
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+
+@media (max-width: 600px) {
+  /* Styles for screens with a maximum width of 600px */
+  div#greetingRef {
+    height: 100px; /* Adjust the height value as needed */
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+  /* Styles for screens with a width between 601px and 1200px */
+  div#greetingRef {
+    height: 200px; /* Adjust the height value as needed */
+  }
+}
+
+@media (min-width: 1201px) {
+  /* Styles for screens with a minimum width of 1201px */
+  div#greetingRef {
+    height: 300px; /* Adjust the height value as needed */
+  }
+}
