--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -688,3 +688,21 @@ scrollbar-width: none;
     height: 300px; /* Adjust the height value as needed */
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px; 
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 4px; 
+}
+
+::-webkit-scrollbar-track:hover {
+  background-color: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; 
+}
